# AutOmicScience

./: .env.example  .gitignore  AOS_BIO_MAS_GUIDE.md  CONTRIBUTING.md  HUGGINGFACE_ASSETS.md  README.md  package-lock.json  package.json  tsconfig.json
_import_scMAS/CanChen_MAS/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
_import_scMAS/CanChen_MAS/configs/: data_plan.yaml
_import_scMAS/CanChen_MAS/configs/capability/: sklearn_svm.yaml  spatial_gnn.yaml  uce_33l_raw_knn.yaml  uce_4l_raw_knn.yaml
_import_scMAS/CanChen_MAS/scripts/: run_reference_self_holdout.py
_import_scMAS/CanChen_MAS/src/scmas/: __init__.py  __main__.py  cli.py  llm_config.py
_import_scMAS/CanChen_MAS/src/scmas/data/: labels.py  prepare_sources.py  reference.py
_import_scMAS/CanChen_MAS/src/scmas/eval/: label_transfer.py  metrics.py  registry.py  uce_ima.py
_import_scMAS/CanChen_MAS/src/scmas/scdesign3/: generate.py
_import_scMAS/CanChen_MAS/src/scmas/stage2/: selector.py
_import_scMAS/CanChen_MAS/src/scmas/stage3/: adapter_executor.py
_import_scMAS/CanChen_MAS/src/scmas/stage4/: llm_adjudicator.py  policy.py  reference_heads.py
_import_scMAS/CanChen_MAS/tests/: test_stage4_consensus.py
src/bridge/runtime/: pyproject.toml
src/bridge/runtime/aos_agent/: __init__.py  __main__.py  bio_mas.py  cli.py  embedding_cache.py  io.py  llm_config.py  paths.py
src/bridge/runtime/aos_agent/data/: catalog.py  labels.py  prepare_sources.py  reference.py
src/bridge/runtime/aos_agent/eval/: datasets.py  label_transfer.py  metrics.py  registry.py  run.py  sklearn_worker.py  uce_ima.py
src/bridge/runtime/aos_agent/scdesign3/: discover.py  generate.py
src/bridge/runtime/aos_agent/stage2/: __init__.py  selector.py
src/bridge/runtime/aos_agent/stage3/: __init__.py  adapter_executor.py
src/bridge/runtime/aos_agent/stage4/: __init__.py  consensus.py  llm_adjudicator.py  policy.py  reference_heads.py
src/bridge/runtime/configs/: data_plan.yaml  model_registry.yaml  paths.yaml
src/bridge/runtime/configs/capability/: expression_log1p_knn.yaml  expression_log1p_prototype.yaml  geneformer_raw_knn.yaml  index.yaml  nicheformer_raw_knn.yaml  (+10 more)
src/bridge/runtime/novaeve_agent/: __main__.py  cli.py  embedding_cache.py  paths.py
src/bridge/runtime/novaeve_bio/: __main__.py  cli.py  embedding_cache.py
src/bridge/runtime/scripts/: run_reference_self_holdout.py  run_stage1_smoke.sh  run_stage3_chunked_full.py  setup_scdesign3_r_packages.R
(+328 files in other folders)
