[project]
name = "novaeve-bio"
version = "0.1.0"
description = "Novaeve biological compute runtime — single-cell annotation pipeline."
requires-python = ">=3.10"
dependencies = [
  "anndata",
  "numpy",
  "pandas",
  "pyyaml",
  "scipy",
  "scikit-learn",
  "joblib",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]
test = [
  "pytest",
]
foundation = [
  "torch>=2.4",
  "transformers>=4.40",
  "safetensors>=0.4",
  "scanpy>=1.10",
]

[project.scripts]
novaeve-bio = "novaeve_bio.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
