[project]
name = "automic-science-bridge"
version = "0.1.0"
description = "AutOmicScience Python bridge runtime — scientific compute backend for the TypeScript framework. Provides single-cell annotation, scFM adapters, and bioinformatics workflows."
requires-python = ">=3.10"
dependencies = [
  "anndata",
  "numpy",
  "pandas",
  "pyyaml",
  "scipy",
  "scikit-learn",
  "joblib",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]
test = [
  "pytest",
]
foundation = [
  "torch>=2.4",
  "transformers>=4.40",
  "safetensors>=0.4",
  "scanpy>=1.10",
]
notebook = [
  "jupyter-client>=8.0",
  "ipykernel>=6.0",
]
r = [
  "rpy2>=3.5",
]

[project.scripts]
automic-science-bridge = "aos_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aos_agent*"]
